minor cosmetic tweaks to leases

--- a/app/views/leases/_form.html.haml
+++ b/app/views/leases/_form.html.haml
@@ -7,7 +7,7 @@
     = f.input :rent_total, required: true, disabled: disabled
     = f.input :rent_program_paid, label: 'Rent Paid by Program', required: true, disabled: disabled
     = f.association :owner, label: 'Property Owner', :collection => Contact.building_owners, required: true, disabled: disabled
-    = f.input :lease_updated_at, as: :date_picker, label: 'Lease Last Updated', input_html: {value: Date.today}
+    = f.input :lease_updated_at, as: :date_picker, label: 'Leased through'
 
   .form-actions
     = f.button :submit
