--- a/app/views/leases/index.html.haml
+++ b/app/views/leases/index.html.haml
@@ -11,8 +11,13 @@
     = render 'search_form'
 :ruby
   columns = ['elite_lease_id', 'rent_total']
-  column_labels = {'elite_lease_id':'Elite Lease Identifier', 'rent_total':'Total Rent', 'updated_at': 'Lease Updated At'}
-  directions = current_sort_order(Hash[columns.map {|x| [x, nil]}])
+  column_labels = {
+  'elite_lease_id':'Elite Lease Identifier',
+  'rent_total':'Total Rent',
+  'rent_program_paid':'Program Paid',
+  'rent_tenant_paid':'Tenant Paid',
+  'updated_at': 'Leased Through'}
+  directions = current_sort_order(Hash[column_labels.keys.map {|x| [x, nil]}])
   titles = column_labels
   #directions.each {| k,v | titles[k] = @leases.human_attribute_name(k)}
   #directions.each {| k,v | titles[k] = column_labels[k]}
@@ -38,6 +43,10 @@
                 = c.elite_lease_id
               %td
                 = number_to_currency c.rent_total
+              %td
+                = number_to_currency c.rent_program_paid
+              %td
+                = number_to_currency c.rent_tenant_paid
               %td
                 = c.lease_updated_at.to_date
               %td
