--- a/app/views/contacts/index.html.haml
+++ b/app/views/contacts/index.html.haml
@@ -10,7 +10,7 @@
   .col-sm-4
     = render 'search_form'
 :ruby
-  columns = ['last_name', 'first_name', 'middle_name', 'email', 'phone', 'role']
+  columns = ['first_name', 'last_name', 'business_name', 'email', 'phone', 'role']
   directions = current_sort_order(Hash[columns.map {|x| [x, nil]}])
   titles = {}
   directions.each {| k,v | titles[k] = @contacts.human_attribute_name(k)}
@@ -35,13 +35,13 @@
             %tr
               %td
                 = link_to edit_contact_path(c) do
-                  = c.last_name
-              %td
-                = link_to edit_contact_path(c) do
                   = c.first_name
               %td
                 = link_to edit_contact_path(c) do
-                  = c.middle_name
+                  = c.last_name
+              %td
+                = link_to edit_contact_path(c) do
+                  = c.business_name
               %td= mail_to c.email, nil, target: '_blank'
               %td= c.phone
               %td= c.role
